--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ repositories {
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.codehaus.groovy:groovy')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile 'org.springframework.boot:spring-boot-starter-web'
+  compile 'org.springframework.boot:spring-boot-starter-aop'
+	compile 'org.codehaus.groovy:groovy'
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
