--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,7 @@ dependencies {
 	compile 'org.codehaus.groovy:groovy'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
+
+bootRun {
+  systemProperties = System.properties
+}
